--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
   <script src="https://mapv.baidu.com/gl/examples/static/common.js"></script>
   <script src="https://mapv.baidu.com/build/mapv.min.js"></script>
   <script src="https://code.bdstatic.com/npm/mapvgl@1.0.0-beta.146/dist/mapvgl.min.js"></script>
+  <script src="https://code.bdstatic.com/npm/mapvgl@1.0.0-beta.140/dist/mapvgl.threelayers.min.js"></script>
+
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
